# Overlay-Network-Topology-Optimisation-for-Low-Latency-Broadcast

./: .LCKTopologyOptimizer.java~  .gitignore  LICENSE  Link to video recording  OverlayTransport.java  TopologyOptimizer.java  pyproject.toml
src/src/: Main.java
src/src/com/engine/: BroadcastEngine.java
src/src/com/optimizer/: TopologyOptimizer.java
src/src/com/transport/: OverlayTransport.java
