[project]
name = "overlay-network-topology-optimisation-for-low-latency-broadcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pathlib>=1.0.1",
    "statistics>=1.0.3.5",
]
