[project]
name = "overlay-network-topology-optimisation-for-low-latency-broadcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.2.0",
    "flask>=3.1.3",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pathlib>=1.0.1",
    "requests>=2.34.2",
    "statistics>=1.0.3.5",
]
